--- a/build.gradle
+++ b/build.gradle
@@ -1,32 +1,45 @@
 plugins {
-  id 'java'
-  id 'application'
-  id 'com.github.johnrengelman.shadow' version '1.2.2'
+    id 'java'
+    id 'application'
+    id 'com.github.johnrengelman.shadow' version '1.2.2'
 }
 
 repositories {
-  jcenter()
-  maven {
-    url = 'https://oss.sonatype.org/content/repositories/snapshots/'
-  }
+    mavenCentral()
+//    maven {
+//        url = 'https://oss.sonatype.org/content/repositories/snapshots/'
+//    }
 }
 
 version = '3.1.0'
 sourceCompatibility = '1.8'
+mainClassName = 'io.vertx.core.Launcher'
 
 dependencies {
-  compile "io.vertx:vertx-core:$version"
+    compile group: 'io.vertx', name: 'vertx-core', version: '3.1.0'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.4.1'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.4.1'
 }
 
-mainClassName = 'io.vertx.example.HelloWorldEmbedded'
-
 shadowJar {
-  classifier = 'fat'
-  mergeServiceFiles {
-    include 'META-INF/services/io.vertx.core.spi.VerticleFactory'
-  }
+    classifier = 'fat'
+    manifest {
+        attributes 'Main-Verticle': 'io.vertx.example.SampleVerticle'
+    }
+    mergeServiceFiles {
+        include 'META-INF/services/io.vertx.core.spi.VerticleFactory'
+    }
 }
 
 task wrapper(type: Wrapper) {
-  gradleVersion = '2.8'
+    gradleVersion = '2.8'
+}
+
+configurations {
+    compile
+}
+
+task copyDeps(type: Copy) {
+    from configurations.compile
+    into "$buildDir/libs/dependencies"
 }
